added some of the beginning content and started the intersection JS

--- a/index.html
+++ b/index.html
@@ -5,10 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <script src="./scripts/fade.js">
+    <script src="./scripts/intersection.js">
       defer
     </script>
     <title>The Best NBA Playoff Performances of All Time</title>
   </head>
-  <body></body>
+  <body class="bg-img">
+    <div class="white centered playerslide">
+      <h1 class="boxed first-node">
+        The Best NBA Playoff Performances of All Time
+      </h1>
+      <p class="boxed big-space">
+        The NBA playoffs is where the best players truly shine. Legends are made
+        in the postseason. Throughout the history of the NBA, some of the best
+        players to ever step on the court have had all-time great individual
+        performances in the playoffs. In this list, you will find 10 of the best
+        individual performances in NBA playoff history, from most recent to
+        oldest.
+      </p>
+      <button class="margin-auto">Sources</button>
+    </div>
+
+    <!-- this is the first player slide -->
+    <div class="blue playerslide">
+      <div>
+        <h1 class="player-header white centered">
+          Luka Doncic's Historic Game Winner
+        </h1>
+        <img
+          class="player-image"
+          src="./images/luka-doncic.png"
+          alt="Luka Doncic"
+        />
+      </div>
+    </div>
+  </body>
 </html>
