--- a/index.html
+++ b/index.html
@@ -5,39 +5,121 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <script src="./scripts/intersection.js">
-      defer
-    </script>
+    <script src="./scripts/intersection.js" defer></script>
     <title>The Best NBA Playoff Performances of All Time</title>
   </head>
-  <body class="bg-img">
-    <div class="white centered playerslide">
-      <h1 class="boxed first-node">
-        The Best NBA Playoff Performances of All Time
-      </h1>
-      <p class="boxed big-space">
-        The NBA playoffs is where the best players truly shine. Legends are made
-        in the postseason. Throughout the history of the NBA, some of the best
-        players to ever step on the court have had all-time great individual
-        performances in the playoffs. In this list, you will find 10 of the best
-        individual performances in NBA playoff history, from most recent to
-        oldest.
-      </p>
-      <button class="margin-auto">Sources</button>
-    </div>
+  <body>
+    <section data-color="white" class="bg-img">
+      <div class="white centered playerslide">
+        <h1 class="boxed first-node">
+          The Best NBA Playoff Performances of All Time
+        </h1>
+        <p class="boxed big-space">
+          The NBA playoffs is where the best players truly shine. Legends are
+          made in the postseason. Throughout the history of the NBA, some of the
+          best players to ever step on the court have had all-time great
+          individual performances in the playoffs. In this list, you will find
+          10 of the best individual performances in NBA playoff history, from
+          most recent to oldest.
+        </p>
+        <button class="margin-auto">Sources</button>
+      </div>
+    </section>
 
     <!-- this is the first player slide -->
-    <div class="blue playerslide">
+    <section data-color="#056bb7" class="blue playerslide div-wrapper">
       <div>
         <h1 class="player-header white centered">
           Luka Doncic's Historic Game Winner
         </h1>
+        <p class="white centered">
+          Doncic's performance in Game 4 of the Western First Round in 2020
+          broke so many records that it's impossible to list them all here, so
+          you can find them here instead. His OT buzzer beater against the
+          Clippers capped off a 21 point comeback for the Mavs, the largest in
+          franchise postseason history. His monster triple-double made him only
+          the ninth player to ever record consecutive triples doubles in the
+          playoffs, and only the third at the age of 21 or younger.
+        </p>
         <img
           class="player-image"
           src="./images/luka-doncic.png"
           alt="Luka Doncic"
         />
       </div>
-    </div>
+    </section>
+
+    <!-- this is the second player slide -->
+    <section data-color="#701f39" class="maroon playerslide div-wrapper">
+      <div>
+        <h1 class="player-header white centered">
+          LeBron James brings the Cavs back from down 3-1 in the Finals
+        </h1>
+        <p class="white centered">
+          James' chasedown block of Andre Igoudala in the closing minutes of
+          Game 7 of the 2016 NBA Finals is one of the most iconic moments in NBA
+          history. The moment capped off the Cavs comeback from down 3-1 against
+          the 73-9 Warriors, which made them the only team to ever come back
+          from a 3-1 deficit in the Finals. James' triple-double in Game 7 also
+          capped off a series of huge performances, and allowed him to finally
+          bring a title to Cleveland.
+        </p>
+        <img
+          class="player-image"
+          src="./images/lebron-james-1.png"
+          alt="LeBron James"
+        />
+      </div>
+    </section>
+
+    <!-- third player slide -->
+    <section data-color="#8F001B" class="heat-red playerslide div-wrapper">
+      <div>
+        <h1 class="player-header white centered">
+          LeBron's Best Playoff Game Ever?
+        </h1>
+        <p class="white centered">
+          In 2012, two years into the "Big 3" era in Miami, the Heat still
+          hadn't won a championship. And now, they were facing elimination to
+          the Boston Celtics, one of James' long time rivals, in Game 6 of the
+          Eastern Conference Finals. If the Heat lost here, they would have
+          nothing to show two years after bringing 3 All-Stars together. With
+          the pressure on, James had a monster performance, scoring 45 points
+          and grabbing 15 rebounds, pushing the series to a Game 7 back in
+          Miami. The Heat would go on to win Game 7 and the championship, James’
+          first. This game is considered the greatest of James’ career by many.
+        </p>
+        <img
+          class="player-image"
+          src="./images/lebron-james-2.png"
+          alt="LeBron James"
+        />
+      </div>
+    </section>
+
+    <!-- fourth player slide -->
+    <section data-color="#701f39" class="maroon playerslide div-wrapper">
+      <div>
+        <h1 class="player-header white centered">
+          LeBron's Best Playoff Game Ever?
+        </h1>
+        <p class="white centered">
+          In 2012, two years into the "Big 3" era in Miami, the Heat still
+          hadn't won a championship. And now, they were facing elimination to
+          the Boston Celtics, one of James' long time rivals, in Game 6 of the
+          Eastern Conference Finals. If the Heat lost here, they would have
+          nothing to show two years after bringing 3 All-Stars together. With
+          the pressure on, James had a monster performance, scoring 45 points
+          and grabbing 15 rebounds, pushing the series to a Game 7 back in
+          Miami. The Heat would go on to win Game 7 and the championship, James’
+          first. This game is considered the greatest of James’ career by many.
+        </p>
+        <img
+          class="player-image"
+          src="./images/lebron-james-1.png"
+          alt="LeBron James"
+        />
+      </div>
+    </section>
   </body>
 </html>
