--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <section data-color="white" class="bg-img">
       <div class="white centered playerslide">
-        <h1 class="boxed first-node">
+        <h1 class="first-node">
           The Best NBA Playoff Performances of All Time
         </h1>
         <p class="boxed big-space">
@@ -27,12 +27,12 @@
     </section>
 
     <!-- this is the first player slide -->
-    <section data-color="#056bb7" class="blue playerslide div-wrapper">
+    <section data-color="#056bb7" class="blue div-wrapper">
       <div>
         <h1 class="player-header white centered">
           Luka Doncic's Historic Game Winner
         </h1>
-        <p class="white centered">
+        <p class="white">
           Doncic's performance in Game 4 of the Western First Round in 2020
           broke so many records that it's impossible to list them all here, so
           you can find them here instead. His OT buzzer beater against the
@@ -50,12 +50,12 @@
     </section>
 
     <!-- this is the second player slide -->
-    <section data-color="#701f39" class="maroon playerslide div-wrapper">
+    <section data-color="#701f39" class="maroon div-wrapper">
       <div>
         <h1 class="player-header white centered">
           LeBron James brings the Cavs back from down 3-1 in the Finals
         </h1>
-        <p class="white centered">
+        <p class="white">
           James' chasedown block of Andre Igoudala in the closing minutes of
           Game 7 of the 2016 NBA Finals is one of the most iconic moments in NBA
           history. The moment capped off the Cavs comeback from down 3-1 against
@@ -73,12 +73,12 @@
     </section>
 
     <!-- third player slide -->
-    <section data-color="#8F001B" class="heat-red playerslide div-wrapper">
+    <section data-color="#8F001B" class="heat-red div-wrapper">
       <div>
         <h1 class="player-header white centered">
           LeBron's Best Playoff Game Ever?
         </h1>
-        <p class="white centered">
+        <p class="white">
           In 2012, two years into the "Big 3" era in Miami, the Heat still
           hadn't won a championship. And now, they were facing elimination to
           the Boston Celtics, one of James' long time rivals, in Game 6 of the
@@ -98,26 +98,182 @@
     </section>
 
     <!-- fourth player slide -->
-    <section data-color="#701f39" class="maroon playerslide div-wrapper">
+    <section data-color="#701f39" class="maroon div-wrapper">
       <div>
         <h1 class="player-header white centered">
-          LeBron's Best Playoff Game Ever?
+          A Young LeBron Carries the Cavs through Double Overtime
         </h1>
-        <p class="white centered">
-          In 2012, two years into the "Big 3" era in Miami, the Heat still
-          hadn't won a championship. And now, they were facing elimination to
-          the Boston Celtics, one of James' long time rivals, in Game 6 of the
-          Eastern Conference Finals. If the Heat lost here, they would have
-          nothing to show two years after bringing 3 All-Stars together. With
-          the pressure on, James had a monster performance, scoring 45 points
-          and grabbing 15 rebounds, pushing the series to a Game 7 back in
-          Miami. The Heat would go on to win Game 7 and the championship, James’
-          first. This game is considered the greatest of James’ career by many.
+        <p class="white">
+          In 2007, at age 22, in just his second ever postseason, LeBron James
+          led the Cavs to the Eastern Conference Finals against the Detroit
+          Pistons, who were in their fifth consecutive Conference Finals and
+          were only 2 years removed from winning a championship. In Game 5, with
+          6:14 left in regulation, the Cavaliers were up 79-78. Through the end
+          of regulation and both overtimes, James scored 29 of the Cav’s final
+          30 points, including the team’s last 25 points, to lead them to
+          victory. The Cavs would go on to win Game 6 and make it to their first
+          Finals in franchise history, which was also the first Finals
+          appearance of many for James.
         </p>
         <img
           class="player-image"
           src="./images/lebron-james-1.png"
           alt="LeBron James"
+        />
+      </div>
+    </section>
+
+    <!-- fifth player slide -->
+    <section data-color="#EE1815" class="philly-red div-wrapper">
+      <div>
+        <h1 class="player-header white centered">
+          Allen Iverson upsets the Kobe and Shaq led Lakers
+        </h1>
+        <p class="white">
+          When reigning MVP AI and the ragtag Sixers went up against the
+          powerhouse Lakers in the 2001 Finals, everybody thought that it would
+          be a fast and easy sweep for the Lakers. That is, everybody not named
+          Allen Iverson. The Lakers had reached the Finals with an 11-0 record,
+          sweeping all three teams they faced in the Western Conference
+          Playoffs. They would have ended with a perfect record in the
+          postseason if not for AI’s monster performance in Game 1 of the
+          Finals, where he played all but three seconds of the overtime victory.
+          Even though the Sixers would go on to lose the series, Game 1 showed
+          that AI was truly the MVP and also produced one of the most iconic
+          moments in NBA history (link).
+        </p>
+        <img
+          class="player-image"
+          src="./images/allen-iverson.png"
+          alt="Allen Iverson"
+        />
+      </div>
+    </section>
+
+    <!-- sixth player slide -->
+    <section data-color="#CF0540" class="chicago-red div-wrapper">
+      <div>
+        <h1 class="player-header white centered">
+          Michael Jordan’s “Last Shot”
+        </h1>
+        <p class="white">
+          MJ is one the greatest players to ever touch a basketball. He won two
+          different three-peats with the Bulls, totaling to six titles in eight
+          years. 1998 was the culmination of the second three-peat for Jordan
+          and the Bulls, and they had to face a tough Utah Jazz team in the
+          Finals. With Scottie Pippen, Jordan’s all-time great sidekick, barely
+          able to move due to an injury, Jordan made sure that the Bulls
+          finished out their second three-peat with a 45 point performance in
+          Game 6, including the iconic game winning shot (link) over Byron
+          Russel. Whild Jordan would play again for the Washington Wizards in
+          the early 2000s, this shot was the culmination of an era of basketball
+          dominated by MJ.
+        </p>
+        <img
+          class="player-image"
+          src="./images/michael-jordan.png"
+          alt="Michael Jordan"
+        />
+      </div>
+    </section>
+
+    <!-- seventh player slide -->
+    <section data-color="#CF0540" class="chicago-red div-wrapper">
+      <div>
+        <h1 class="player-header white centered">The Flu Game</h1>
+        <p class="white">
+          A performance so iconic that it needs no other introduction. In 1997,
+          Jordan’s Bulls on John Stockon, Karl Malone, and the Utah Jazz in the
+          Finals. In the hours leading up to Game 5, Jordan did not participate
+          in practice and was in a dark locker room vomiting. However, he told
+          Coach Phil Jackson he could play, and ended up playing 44 minutes and
+          dropping 38, with 15 in the fourth quarter, in a win that sent the
+          series back to Chicago with the Bulls up 3-2. The Flu Game is by far
+          the most iconic and memorable playoff performance in NBA history.
+        </p>
+        <img
+          class="player-image"
+          src="./images/michael-jordan.png"
+          alt="Michael Jordan"
+        />
+      </div>
+    </section>
+
+    <!-- eighth player slide -->
+    <section data-color="#CF0540" class="chicago-red div-wrapper">
+      <div>
+        <h1 class="player-header white centered">
+          “It’s just God disguised as Michael Jordan”
+        </h1>
+        <p class="white">
+          Before winning six rings in eight years, Michael Jordan was tasked
+          with dragging the abysmal Bulls team that drafted him through an
+          Eastern Conference that was made up of some all-time great teams. One
+          such team was the 1986 Boston Celtics, featuring 3-time MVP Larry
+          Bird. MJ and Bulls ran into the Celtics in the first round of the 1986
+          playoffs. In Game 2, MJ dropped 63 points in a double-overtime loss,
+          which broke Elgin Baylor’s 24-year-old record for most points in a
+          playoff, and is a record that still stands today. After the game,
+          Larry Bird said that MJ was the greatest player he had ever seen and
+          called him “God disguised as Michael Jordan.”
+        </p>
+        <img
+          class="player-image"
+          src="./images/michael-jordan.png"
+          alt="Michael Jordan"
+        />
+      </div>
+    </section>
+
+    <!-- ninth player slide -->
+    <section data-color="#532387" class="purple div-wrapper">
+      <div>
+        <h1 class="player-header white centered">
+          Magic Johnson Wins Finals MVP as a Rookie
+        </h1>
+        <p class="white">
+          While Magic Johnson played point guard, he was incredibly tall,
+          standing at 6’9”. This came in handy for Game 6 of the 1980 NBA
+          Finals, where Johnson, Kareem Abdul-Jabbar, and the Lakers were in the
+          midst of taking on the Philadelphia 76ers. With Abdul-Jabbar out due
+          to an ankle injury, Johnson began the game at center but played every
+          position throughout the game and led the Lakers to a 123-107 victory,
+          winning them the title, their seventh in franchise history. Johnson’s
+          performance earned him Final MVP, making him the only rookie in NBA
+          history to earn such an honor.
+        </p>
+        <img
+          class="player-image"
+          src="./images/magic-johnson.png"
+          alt="Magic Johnson"
+        />
+      </div>
+    </section>
+
+    <!-- tenth player slide -->
+    <section data-color="#008447" class="green div-wrapper">
+      <div>
+        <h1 class="player-header white centered">
+          Bill Russell Stuffs the Stat Sheet
+        </h1>
+        <p class="white">
+          Bill Russell is the winningest player in NBA history, having won 11
+          championships with the Boston Celtics. He is also responsible for some
+          of the most eye-popping performances in NBA playoff history. His most
+          dazzling performance was in Game 7 of the 1962 NBA Finals, where his
+          Celtics took on the Lakers. He played every minute of the game,
+          including overtime, and finished with 30 points and 40 rebounds. Since
+          blocks weren’t recorded in thoses days of the NBA, we can only imagine
+          how many he had if he pulled down 40 rebounds. Russell’s performance
+          clinched Boston’s fourth straight championship, and the fifth in
+          franchise history. Russell and the Celtics would go on to face the
+          Lakers in the Finals five more times throughout the 1960s, and Boston
+          would win each time.
+        </p>
+        <img
+          class="player-image"
+          src="./images/bill-russell.png"
+          alt="Bill Russell"
         />
       </div>
     </section>
