started the desktop styles, created the styles for what the player slides will look like

--- a/index.html
+++ b/index.html
@@ -60,34 +60,36 @@
         <h1 class="player-header white centered">
           Luka Doncic's Historic Game Winner
         </h1>
-        <img
-          class="avatar image-center"
-          src="./images/luka-doncic.png"
-          alt="Luka Doncic"
-        />
-        <ul class="wrapper stats">
-          <li>Points: 43</li>
-          <li>Assists: 13</li>
-          <li>Rebounds: 17</li>
-          <li>Blocks: 1</li>
-          <li>Steals: 2</li>
-          <li>FG%: 18/31</li>
-        </ul>
-        <p class="white">
-          Doncic's performance in Game 4 of the Western First Round in 2020
-          broke so many records that it's impossible to list them all here, so
-          you can find them
-          <a
-            href="https://twitter.com/MavsPR/status/1297896509695037441?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1297896639361961985%7Ctwgr%5E%7Ctwcon%5Es2_&ref_url=https%3A%2F%2Fca.nba.com%2Fnews%2Fnba-playoffs-10-greatest-single-game-individual-postseason-performances-in-nba-history%2F45jmayb4cqst1mkfvzxbl6jai"
-            target="_blank"
-            >here</a
-          >
-          instead. His OT buzzer beater against the Clippers capped off a 21
-          point comeback for the Mavs, the largest in franchise postseason
-          history. His monster triple-double made him only the ninth player to
-          ever record consecutive triples doubles in the playoffs, and only the
-          third at the age of 21 or younger.
-        </p>
+        <div class="desktop-wrapper">
+          <img
+            class="avatar image-center item1"
+            src="./images/luka-doncic.png"
+            alt="Luka Doncic"
+          />
+          <ul class="wrapper stats item2">
+            <li>Points: 43</li>
+            <li>Assists: 13</li>
+            <li>Rebounds: 17</li>
+            <li>Blocks: 1</li>
+            <li>Steals: 2</li>
+            <li>FG%: 18/31</li>
+          </ul>
+          <p class="white item3">
+            Doncic's performance in Game 4 of the Western First Round in 2020
+            broke so many records that it's impossible to list them all here, so
+            you can find them
+            <a
+              href="https://twitter.com/MavsPR/status/1297896509695037441?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1297896639361961985%7Ctwgr%5E%7Ctwcon%5Es2_&ref_url=https%3A%2F%2Fca.nba.com%2Fnews%2Fnba-playoffs-10-greatest-single-game-individual-postseason-performances-in-nba-history%2F45jmayb4cqst1mkfvzxbl6jai"
+              target="_blank"
+              >here</a
+            >
+            instead. His OT buzzer beater against the Clippers capped off a 21
+            point comeback for the Mavs, the largest in franchise postseason
+            history. His monster triple-double made him only the ninth player to
+            ever record consecutive triples doubles in the playoffs, and only
+            the third at the age of 21 or younger.
+          </p>
+        </div>
       </div>
     </section>
 
