created the scroll to top button

--- a/index.html
+++ b/index.html
@@ -10,12 +10,25 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script src="./scripts/intersection.js" defer></script>
     <script src="./scripts/dropdown.js" defer></script>
+    <script src="./scripts/scroll.js" defer></script>
     <!-- <script src="./scripts/fetch.js" defer></script> -->
     <title>The Best NBA Playoff Performances of All Time</title>
   </head>
+
   <body>
+    <!-- scroll to top button -->
+    <i
+      class="fa fas fa-chevron-up fa-lg"
+      onclick="topFunction()"
+      id="myBtn"
+    ></i>
+    <!-- landing page -->
     <section data-color="#424242" class="bg-img">
       <video
         class="video-bg"
