attempting to improve the scroll function by making it scroll to the different sections

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     </section>
 
     <!-- this is the first player slide -->
-    <section data-color="#056bb7" class="blue">
-      <div>
+    <section data-color="#056bb7" class="blue slide">
+      <div id="luka">
         <h1 class="player-header white centered">
           Luka Doncic's Historic Game Winner
         </h1>
@@ -108,7 +108,7 @@
     </section>
 
     <!-- this is the second player slide -->
-    <section data-color="#701f39" class="maroon">
+    <section data-color="#701f39" class="maroon slide">
       <div>
         <h1 class="player-header white centered">
           LeBron James brings the Cavs back from down 3-1 in the Finals
