working on the buttons, everything else pretty much done

--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
 
   <body>
     <!-- navigation buttons -->
-    <i
-      class="fa fas fa-chevron-up fa-lg"
-      onclick="topFunction()"
-      id="myBtn"
-    ></i>
+    <i class="fa fas fa-chevron-up fa-lg" onclick="previous()" id="myBtn2"></i>
+    <i class="fa fas fa-chevron-down fa-lg" onclick="next()" id="myBtn1"></i>
     <!-- landing page -->
     <section data-color="#424242" class="bg-img">
       <video
@@ -69,7 +66,6 @@
     </section>
 
     <!-- this is the first player slide -->
-    <div id="luka"></div>
     <section data-color="#056bb7" class="blue slide">
       <div>
         <h1 class="player-header white centered">
