fixed the issue w/ the buttons and finalized the project

--- a/index.html
+++ b/index.html
@@ -23,51 +23,63 @@
 
   <body>
     <!-- navigation buttons -->
-    <i class="fa fas fa-chevron-up fa-lg" onclick="previous()" id="myBtn2"></i>
-    <i class="fa fas fa-chevron-down fa-lg" onclick="next()" id="myBtn1"></i>
+    <i
+      class="fa fas fa-chevron-up fa-lg nav-button"
+      onclick="previous()"
+      id="myBtn2"
+    ></i>
+    <i
+      class="fa fas fa-chevron-down fa-lg nav-button"
+      onclick="next()"
+      id="myBtn1"
+    ></i>
     <!-- landing page -->
     <section data-color="#424242" class="bg-img">
-      <video
-        class="video-bg"
-        src="./images/jordan-shrug.mp4"
-        autoplay
-        muted
-        loop
-      ></video>
-      <div class="white centered">
-        <h1 class="first-node">
-          The Best NBA Playoff Performances of All Time
-        </h1>
-        <div class="dropdown">
-          <button onclick="dropdown()" class="dropbtn">Sources</button>
-          <div id="myDropdown" class="dropdown-content">
-            <a
-              href="https://ca.nba.com/news/nba-playoffs-10-greatest-single-game-individual-postseason-performances-in-nba-history/45jmayb4cqst1mkfvzxbl6jai"
-              target="_blank"
-              >List of performances</a
-            >
-            <a href="https://www.statmuse.com/players" target="_blank"
-              >Player Images</a
-            >
-            <a href="https://www.basketball-reference.com/" target="_blank"
-              >Player Stats</a
-            >
+      <div>
+        <video
+          class="video-bg"
+          src="./images/jordan-shrug.mp4"
+          autoplay
+          muted
+          loop
+        ></video>
+        <div class="white centered">
+          <h1 class="first-node">
+            The Best NBA Playoff Performances of All Time
+          </h1>
+          <div class="dropdown">
+            <button onclick="dropdown()" class="dropbtn">Sources</button>
+            <div id="myDropdown" class="dropdown-content">
+              <a
+                href="https://ca.nba.com/news/nba-playoffs-10-greatest-single-game-individual-postseason-performances-in-nba-history/45jmayb4cqst1mkfvzxbl6jai"
+                target="_blank"
+                >List of performances</a
+              >
+              <a href="https://www.statmuse.com/players" target="_blank"
+                >Player Images</a
+              >
+              <a
+                href="https://www.balldontlie.io/?shell#introduction"
+                target="_blank"
+                >Player Stats</a
+              >
+            </div>
           </div>
+          <p class="boxed big-space">
+            The NBA playoffs is where the best players truly shine. Legends are
+            made in the postseason. Throughout the history of the NBA, some of
+            the best players to ever step on the court have had all-time great
+            individual performances in the playoffs. In this list, you will find
+            10 of the best individual performances in NBA playoff history, from
+            most recent to oldest.
+          </p>
         </div>
-        <p class="boxed big-space">
-          The NBA playoffs is where the best players truly shine. Legends are
-          made in the postseason. Throughout the history of the NBA, some of the
-          best players to ever step on the court have had all-time great
-          individual performances in the playoffs. In this list, you will find
-          10 of the best individual performances in NBA playoff history. Click
-          on each portrait to watch a video of the performance
-        </p>
       </div>
     </section>
 
     <!-- this is the first player slide -->
-    <section data-color="#056bb7" class="blue slide">
-      <div>
+    <section data-color="#056bb7">
+      <div class="blue slide">
         <h1 class="player-header white centered">
           Luka Doncic's Historic Game Winner
         </h1>
@@ -98,8 +110,8 @@
     </section>
 
     <!-- this is the second player slide -->
-    <section data-color="#701f39" class="maroon slide">
-      <div>
+    <section data-color="#701f39">
+      <div class="maroon slide">
         <h1 class="player-header white centered">
           LeBron James brings the Cavs back from down 3-1 in the Finals
         </h1>
@@ -130,8 +142,8 @@
     </section>
 
     <!-- third player slide -->
-    <section data-color="#8F001B" class="heat-red">
-      <div>
+    <section data-color="#8F001B">
+      <div class="heat-red">
         <h1 class="player-header white centered">
           LeBron's Best Playoff Game Ever?
         </h1>
@@ -157,8 +169,8 @@
     </section>
 
     <!-- fourth player slide -->
-    <section data-color="#701f39" class="maroon">
-      <div>
+    <section data-color="#701f39">
+      <div class="maroon">
         <h1 class="player-header white centered">
           A Young LeBron Carries the Cavs through Double Overtime
         </h1>
@@ -183,8 +195,8 @@
     </section>
 
     <!-- fifth player slide -->
-    <section data-color="#EE1815" class="philly-red">
-      <div>
+    <section data-color="#EE1815">
+      <div class="philly-red">
         <h1 class="player-header white centered">
           Allen Iverson upsets the Kobe and Shaq led Lakers
         </h1>
@@ -215,8 +227,8 @@
     </section>
 
     <!-- sixth player slide -->
-    <section data-color="#CF0540" class="chicago-red">
-      <div>
+    <section data-color="#CF0540">
+      <div class="chicago-red">
         <h1 class="player-header white centered">
           Michael Jordan’s “Last Shot”
         </h1>
@@ -248,8 +260,8 @@
     </section>
 
     <!-- seventh player slide -->
-    <section data-color="#CF0540" class="chicago-red">
-      <div>
+    <section data-color="#CF0540">
+      <div class="chicago-red">
         <h1 class="player-header white centered">The Flu Game</h1>
         <div class="desktop-wrapper">
           <img
@@ -273,8 +285,8 @@
     </section>
 
     <!-- eighth player slide -->
-    <section data-color="#CF0540" class="chicago-red">
-      <div>
+    <section data-color="#CF0540">
+      <div class="chicago-red">
         <h1 class="player-header white centered">
           “It’s just God disguised as Michael Jordan”
         </h1>
@@ -300,8 +312,8 @@
     </section>
 
     <!-- ninth player slide -->
-    <section data-color="#532387" class="purple">
-      <div>
+    <section data-color="#532387">
+      <div class="purple">
         <h1 class="player-header white centered">
           Magic Johnson Wins Finals MVP as a Rookie
         </h1>
